--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public",
-    "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
+    "dev-server": "webpack-dev-server",
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -17,6 +20,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "express": "^4.17.1",
     "live-server": "^1.2.1",
     "node-sass": "^5.0.0",
     "normalize.css": "7.0.0",
